feat: header descriptions

--- a/about.html
+++ b/about.html
@@ -58,7 +58,10 @@
     <div class="container">
         <header>
             <div class="header-title">
-                <h1><a href="index.html">Askin's Blog</a></h1>
+                <div>
+                    <h1><a href="index.html">Askin's Blog</a></h1>
+                    <p>Ciallo～（∠·ω ＜）⌒★</p>
+                </div>
                 <a href="about.html" class="avatar-link"><img src="avatar.jpg" alt="Avatar" class="avatar" onerror="this.style.display='none'"></a>
             </div>
             <!-- <nav>
@@ -72,8 +75,7 @@
             <p>Hi, I'm Askin. </p> -->
             
             <h2>About</h2>
-            <p>Ciallo～（∠·ω ＜）⌒★</p>
-            <p>This Blog is powered by <a href="https://github.com/UndefinedVoidNull/UndefinedVoidNull.github.io" target="_blank">PDF Blog</a></p>            
+            <p>This blog is powered by <a href="https://github.com/UndefinedVoidNull/UndefinedVoidNull.github.io" target="_blank">PDF Blog</a></p>            
             <p>RSS Subscription: <a href="feed.xml" target="_blank">feed.xml</a></p>
         </div>
     </div>
