--- a/p2.html
+++ b/p2.html
@@ -64,7 +64,10 @@
     <div class="container">
         <header>
             <div class="header-title">
-                <h1><a href="index.html">Askin's Blog</a></h1>
+                <div>
+                    <h1><a href="index.html">Askin's Blog</a></h1>
+                    <p>清泉流响山林静, 薄雾迷离景更深</p>
+                </div>
                 <a href="about.html" class="avatar-link"><img src="avatar.jpg" alt="Avatar" class="avatar" onerror="this.style.display='none'"></a>
             </div>
             <!-- <nav>
