--- a/about.html
+++ b/about.html
@@ -75,8 +75,9 @@
             <p>Hi, I'm Askin. </p> -->
             
             <h2>About</h2>
-            <p>This blog is powered by <a href="https://github.com/UndefinedVoidNull/UndefinedVoidNull.github.io" target="_blank">PDF Blog</a></p>            
-            <p>RSS Subscription: <a href="feed.xml" target="_blank">feed.xml</a></p>
+            <p><a href="archives.html" target="_blank">Archives</a></p>
+            <p><a href="feed.xml" target="_blank">RSS Feed</a></p>
+            <p><a href="https://github.com/UndefinedVoidNull/UndefinedVoidNull.github.io" target="_blank">PDF Blog</a></p>            
         </div>
     </div>
 </body>
